--- a/singlefile.html
+++ b/singlefile.html
@@ -1322,8 +1322,8 @@ function showContact() {
     document.getElementById('popupTitle').textContent = "Contact";
     const popupBody = document.getElementById('popupBody');
     popupBody.innerHTML = `
-    <p>Discord: https://discord.gg/NAFw4ykZ7n</p>
-    <p>Email: gn.math.business@gmail.com</p>`;
+    <p>Discord: No Discord Rn</p>
+    <p>Email: xenonnetworkalt@gmail.com</p>`;
     popupBody.contentEditable = false;
     document.getElementById('popupOverlay').style.display = "flex";
 }
@@ -1377,14 +1377,14 @@ function loadDMCA() {
             </p>
             <ol>
                 <li>
-                    <a href="https://discord.gg/D4c9VFYWyU" target="_blank" rel="noopener noreferrer">
-                        Join the Discord
-                    </a> and DM <strong>breadbb</strong> or ping me in a public channel 
+                    <a href="https://discord.gg/" target="_blank" rel="noopener noreferrer">
+                        No discord rn
+                    </a> and DM <strong>xen0nkidd</strong>
                     <strong>[INSTANT RESPONSE]</strong>
                 </li>
                 <li>
                     Email me at 
-                    <a href="mailto:gn.math.business@gmail.com">gn.math.business@gmail.com</a> 
+                    <a href="mailto:xenonnetworkalt@gmail.com">xenonnetworkalt@gmail.com</a> 
                     with the subject starting with <code>!DMCA</code>.
                     <strong>[DELAYED RESPONSE]</strong>
                 </li>
