--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gn-math</title>
-    <meta name="title" content="GN-Math">
+    <meta name="title" content="X3n0nN3tw0rk">
     <meta name="description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on GN-Math. Fast, free, no downloads—perfect for school or home.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://gn-math.github.io/">
-    <meta property="og:title" content="GN-Math">
+    <meta property="og:url" content="https://x3n0nn3tw0rk.github.io/">
+    <meta property="og:title" content="X3n0nN3tw0rk">
     <meta property="og:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on GN-Math. Fast, free, no downloads—perfect for school or home.">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://gn-math.github.io/">
-    <meta name="twitter:title" content="GN-Math">
+    <meta name="twitter:url" content="https://x3n0nn3tw0rk.github.io/">
+    <meta name="twitter:title" content="X3n0nN3tw0rk">
     <meta name="twitter:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on GN-Math. Fast, free, no downloads—perfect for school or home.">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="dark-mode">
     <header>
         <div class="header-content">
-            <div class="logo">gn-math</div>
+            <div class="logo">X3n0nN3tw0rk</div>
             <div class="search-container">
                 <input type="text" id="searchBar" placeholder="Search zones..." oninput="filterZones()">
                 <select id="sortOptions" onchange="sortZones()">
@@ -137,3 +137,4 @@
     </script>
 </body>
 </html>
+
