--- a/test.html
+++ b/test.html
@@ -24,21 +24,20 @@
         gtag('js', new Date());
         gtag('config', 'G-WX5VS54ZDW');
     </script>
-    <script async src="https://fundingchoicesmessages.google.com/i/pub-5521219086088837?ers=1"></script><script>(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
-    <script src="https://cdn.jsdelivr.net/gh/gn-math/gn-math.github.io@main/gnmath.js"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>X3n0nN3tw0rk</title>
-    <meta name="title" content="GN-Math">
-    <meta name="description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on GN-Math. Fast, free, no downloads—perfect for school or home.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://gn-math.github.io/">
-    <meta property="og:title" content="GN-Math">
-    <meta property="og:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on GN-Math. Fast, free, no downloads—perfect for school or home.">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://gn-math.github.io/">
-    <meta name="twitter:title" content="GN-Math">
-    <meta name="twitter:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on GN-Math. Fast, free, no downloads—perfect for school or home.">
+ <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>X3n0nN3tw0rk</title>
+<meta name="title" content="X3n0nN3tw0rk">
+<meta name="description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on X3n0nN3tw0rk. Fast, free, no downloads—perfect for school or home.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://x3n0nn3tw0rk.github.io/">
+<meta property="og:title" content="X3n0nN3tw0rk">
+<meta property="og:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on X3n0nN3tw0rk. Fast, free, no downloads—perfect for school or home.">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:url" content="https://x3n0nn3tw0rk.github.io/">
+<meta name="twitter:title" content="X3n0nN3tw0rk">
+<meta name="twitter:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on X3n0nN3tw0rk. Fast, free, no downloads—perfect for school or home.">
+<link rel="stylesheet" href="style.css">
     <style>
 :root {
     --primary: #fc2651;
