--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body class="dark-mode">
-    
+    <header>
+        <div class="header-content">
+            <div class="logo">
+                <img src="favicon.png" alt="favicon" class="logo-favicon">
+                X3n0nN3tw0rk
             </div>
             <div class="search-container">
                 <input type="text" id="searchBar" placeholder="Search zones..." oninput="filterZones()">
@@ -132,8 +136,6 @@
     </script>
 </body>
 </html>
-
-
 
 
 
