Filter out zones with id of -1
Filtered out zones with an id of -1 to exclude unwanted entries.

--- a/singlefile.html
+++ b/singlefile.html
@@ -858,13 +858,18 @@ function sortZones() {
     } else if (sortBy === 'popular') {
         zones.sort((a, b) => (popularityData[b.id] || 0) - (popularityData[a.id] || 0));
     }
-    zones.sort((a, b) => (a.id === -1 ? -1 : b.id === -1 ? 1 : 0));
+
+    // ⛔ Filter out any zones with an id or index of -1 (like the Discord button)
+    zones = zones.filter(z => z.id !== -1);
+
     if (featuredContainer.innerHTML === "") {
         const featured = zones.filter(z => z.featured);
         displayFeaturedZones(featured);
     }
+
     displayZones(zones);
 }
+
 
 function displayFeaturedZones(featuredZones) {
     featuredContainer.innerHTML = "";
