--- a/singlefile.html
+++ b/singlefile.html
@@ -1279,20 +1279,19 @@ function cloakName(string) {
     document.title = string;
 }
 
-function tabCloak() {
+function openAboutBlank() {
     closePopup();
-    document.getElementById('popupTitle').textContent = "Tab Cloak";
-    const popupBody = document.getElementById('popupBody');
-    popupBody.innerHTML = `
-        <label for="tab-cloak-textbox" style="font-weight: bold;">Set Tab Title:</label><br>
-        <input type="text" id="tab-cloak-textbox" placeholder="Enter new tab name..." oninput="cloakName(this.value)">
-        <br><br><br><br>
-        <label for="tab-cloak-textbox" style="font-weight: bold;">Set Tab Icon:</label><br>
-        <input type="text" id="tab-cloak-textbox" placeholder="Enter new tab icon..." oninput='cloakIcon(this.value)'>
-        <br><br><br>
-    `;
-    popupBody.contentEditable = false;
-    document.getElementById('popupOverlay').style.display = "flex";
+    const newTab = window.open("about:blank", "_blank");
+    const iframe = newTab.document.createElement("iframe");
+    iframe.src = window.location.href;
+    iframe.style.position = "fixed";
+    iframe.style.top = "0";
+    iframe.style.left = "0";
+    iframe.style.width = "100%";
+    iframe.style.height = "100%";
+    iframe.style.border = "none";
+    newTab.document.body.style.margin = "0";
+    newTab.document.body.appendChild(iframe);
 }
 
 const settings = document.getElementById('settings');
@@ -1300,14 +1299,15 @@ settings.addEventListener('click', () => {
     document.getElementById('popupTitle').textContent = "Settings";
     const popupBody = document.getElementById('popupBody');
     popupBody.innerHTML = `
-    <button id="settings-button" onclick="darkMode()">Toggle Dark Mode</button>
-    <br><br>
-    <button id="settings-button" onclick="tabCloak()">Tab Cloak</button>
-    <br>
+        <button id="settings-button" onclick="darkMode()">Toggle Dark Mode</button>
+        <br><br>
+        <button id="settings-button" onclick="openAboutBlank()">Open in about:blank</button>
+        <br>
     `;
     popupBody.contentEditable = false;
     document.getElementById('popupOverlay').style.display = "flex";
 });
+
 
 function closePopup() {
     document.getElementById('popupOverlay').style.display = "none";
