--- a/singlefile.html
+++ b/singlefile.html
@@ -1256,16 +1256,40 @@ function darkMode() {
 
 function openAboutBlank() {
     const newTab = window.open("about:blank", "_blank");
-    const iframe = newTab.document.createElement("iframe");
-    iframe.src = window.location.href;
-    iframe.style.position = "fixed";
-    iframe.style.top = "0";
-    iframe.style.left = "0";
-    iframe.style.width = "100%";
-    iframe.style.height = "100%";
-    iframe.style.border = "none";
-    newTab.document.body.style.margin = "0";
-    newTab.document.body.appendChild(iframe);
+    const doc = newTab.document;
+
+    // Add proper HTML structure
+    doc.write(`
+        <html>
+            <head>
+                <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+                <style>
+                    html, body {
+                        margin: 0;
+                        padding: 0;
+                        height: 100%;
+                        overflow: hidden;
+                        background: #000;
+                    }
+                    iframe {
+                        position: fixed;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        border: none;
+                        transform: scale(1);
+                        transform-origin: top left;
+                    }
+                </style>
+            </head>
+            <body>
+                <iframe src="${window.location.href}"></iframe>
+            </body>
+        </html>
+    `);
+
+    doc.close();
 }
 
 const settings = document.getElementById('settings');
@@ -1281,6 +1305,7 @@ settings.addEventListener('click', () => {
     popupBody.contentEditable = false;
     document.getElementById('popupOverlay').style.display = "flex";
 });
+
 
 function closePopup() {
     document.getElementById('popupOverlay').style.display = "none";
