--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <header>
         <div class="header-content">
             <div class="logo">
-                <img src="favicon.png" alt="favicon" class="logo-favicon">
+                <img src="favicon.png" alt="favicon" class="logo-favicon" id="logoClick">
                 X3n0nN3tw0rk
             </div>
             <div class="search-container">
@@ -182,6 +182,7 @@
     </script>
 </body>
 </html>
+
 
 
 
