--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 (function(){
-    const correctPassword = "Xen0nkidd"; // <-- set your password
+    const correctPassword = ""; // <-- set your password
 
     // ask for password
     const entered = prompt("Enter password to continue:");
@@ -182,6 +182,7 @@
     </script>
 </body>
 </html>
+
 
 
 
