--- a/singlefile.html
+++ b/singlefile.html
@@ -3,7 +3,7 @@
     <head>
        <script>
 (function(){
-    const correctPassword = "Xen0nkidd"; // <-- set your password
+    const correctPassword = ""; // <-- set your password
 
     // ask for password
     const entered = prompt("Enter password to continue:");
