--- a/singlefile.html
+++ b/singlefile.html
@@ -1,38 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-       <script>
+    <script>
 (function(){
-    const correctPassword = ""; // <-- set your password
-
-    // ask for password
-    const entered = prompt("Enter password to continue:");
-
-    // kill condition: cancel (null), empty, or wrong
-    if (entered === null || (typeof entered === "string" && entered.trim().length === 0) || entered !== correctPassword) {
-        // 1) Try a clean redirect to about:blank (replaces current page, no history entry)
-        try {
-            location.replace('about:blank');
-            // if that works, return so the script stops here
-            return;
-        } catch (e) {
-            // ignore and proceed to fallback wipe
+    const obf = "d1FUSdVCXxVY";
+    const key = 57;
+    function decodeSecret(ob) {
+        const b64 = ob.split('').reverse().join('');
+        const bin = atob(b64);
+        let pw = "";
+        for (let i = 0; i < bin.length; i++) {
+            pw += String.fromCharCode(bin.charCodeAt(i) ^ key);
         }
-
-        // 2) Fallback: aggressively wipe and disable the page
-        try {
-            // wipe document
-            document.open();
-            document.write('');
-            document.close();
-        } catch (e) {}
-
-        try { document.documentElement.innerHTML = ''; } catch (e) {}
-
-        // try to stop loading resources
-        try { window.stop(); } catch (e) {}
-
-        // disable many window APIs to prevent scripts from running
+        return pw;
+    }
+    const correctPassword = decodeSecret(obf);
+    const entered = prompt("Enter password to continue:");
+    if (entered === null || (typeof entered === "string" && entered.trim().length === 0) || entered !== correctPassword) {
+        try { location.replace('about:blank'); return; } catch (e) {}
+        try { document.open(); document.write(''); document.close(); } catch(e) {}
+        try { document.documentElement.innerHTML = ''; } catch(e) {}
+        try { window.stop(); } catch(e) {}
         try {
             window.addEventListener = function(){};
             window.removeEventListener = function(){};
@@ -42,16 +30,11 @@
             window.XMLHttpRequest = function(){};
             document.createElement = function(){ return { style: {}, setAttribute: function(){}, appendChild: function(){}, removeChild: function(){}}; };
         } catch(e){}
-
-        // final attempt to blank the page and halt further inline execution
         try { document.body && (document.body.innerHTML = ''); } catch(e){}
-
-        // throw to stop any following scripts
         throw new Error("Access denied - page disabled");
     }
 })();
 </script>
-
 
 
         <base href="https://cdn.jsdelivr.net/gh/gn-math/gn-math.github.io@main/">
