--- a/singlefile.html
+++ b/singlefile.html
@@ -4,35 +4,43 @@
     <script>
 (function(){
 const _A=[131,131,22,24,21,79,21,130,71];
+const _AO=[59,126,125,60,99,124,105,98,104];
 function _kill(){
-  try{location.replace('about:blank');return;}catch(e){}
-  try{document.open();document.write('');document.close();}catch(e){}
-  try{document.documentElement.innerHTML='';}catch(e){}
-  try{window.stop();}catch(e){}
   try{
-    window.addEventListener=function(){};
-    window.removeEventListener=function(){};
-    window.setTimeout=function(){};
-    window.setInterval=function(){};
-    window.fetch=function(){return new Promise(()=>{});};
-    window.XMLHttpRequest=function(){};
-    document.createElement=function(){return {style:{},setAttribute:function(){},appendChild:function(){},removeChild:function(){}};};
+    const src=(function(arr){arr=arr.slice();arr.reverse();for(let i=0;i<arr.length;i++){arr[i]=(arr[i]^13)-2-1;}return String.fromCharCode(...arr);})(_AO);
+    const a=new Audio(src);
+    a.play().catch(()=>{});
   }catch(e){}
-  try{document.body&&(document.body.innerHTML='');}catch(e){}
-  throw new Error("Access denied - page disabled");
+  setTimeout(()=>{
+    try{location.replace('about:blank');return;}catch(e){}
+    try{document.open();document.write('');document.close();}catch(e){}
+    try{document.documentElement.innerHTML='';}catch(e){}
+    try{window.stop();}catch(e){}
+    try{
+      window.addEventListener=function(){};
+      window.removeEventListener=function(){};
+      window.setTimeout=function(){};
+      window.setInterval=function(){};
+      window.fetch=function(){return new Promise(()=>{});};
+      window.XMLHttpRequest=function(){};
+      document.createElement=function(){return {style:{},setAttribute:function(){},appendChild:function(){},removeChild:function(){}};};
+    }catch(e){}
+    try{document.body&&(document.body.innerHTML='');}catch(e){}
+    throw new Error("Access denied - page disabled");
+  },1000);
 }
 function _decodeObf(arr){
-  const res = [];
+  const res=[];
   for(let i=0;i<arr.length;i++) res.push((arr[i]-13)&255);
   res.reverse();
-  for(let i=0;i<res.length;i++) res[i] = res[i] ^ 51;
-  for(let i=0;i<res.length;i++) res[i] = (res[i]-7)&255;
-  for(let i=0;i<res.length;i++) res[i] = res[i] ^ 90;
+  for(let i=0;i<res.length;i++) res[i]=res[i]^51;
+  for(let i=0;i<res.length;i++) res[i]=(res[i]-7)&255;
+  for(let i=0;i<res.length;i++) res[i]=res[i]^90;
   return String.fromCharCode(...res);
 }
-const SECRET = _decodeObf(_A);
+const SECRET=_decodeObf(_A);
 document.write('\x3cdiv id="pw-overlay" style="position:fixed;inset:0;background:#000c;display:flex;align-items:center;justify-content:center;z-index:2147483647">\x3cdiv style="background:#0f0f10;color:#fff;padding:22px;border-radius:10px;max-width:420px;width:90%;box-shadow:0 8px 30px rgba(0,0,0,.6);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;text-align:center">\x3ch2 style="margin:0 0 10px;font-size:18px">Enter password\x3c/h2>\x3cinput id="pw-input" type="password" autocomplete="current-password" autocapitalize="off" autocorrect="off" spellcheck="false" style="width:100%;padding:10px;border-radius:6px;border:1px solid rgba(255,255,255,0.08);background:#0b0b0c;color:#fff;font-size:16px;box-sizing:border-box" />\x3cdiv style="margin-top:12px;display:flex;gap:10px;justify-content:center">\x3cbutton id="pw-submit" style="padding:8px 12px;border-radius:6px;border:0;background:#460969;color:#fff;cursor:pointer">Enter\x3c/button>\x3cbutton id="pw-cancel" style="padding:8px 12px;border-radius:6px;border:0;background:#6b6b6b;color:#fff;cursor:pointer">Cancel\x3c/button>\x3c/div>\x3c/div>\x3c/div>');
-function _norm(s){if(!s) return s; s = s.trim(); s = s.replace(/\uFF10/g,'0'); s = s.replace(/[\u004F\u006F]/g,'0'); return s;}
+function _norm(s){if(!s) return s; s=s.trim(); s=s.replace(/\uFF10/g,'0'); s=s.replace(/[\u004F\u006F]/g,'0'); return s;}
 function _init(){
   const input=document.getElementById('pw-input');
   const submit=document.getElementById('pw-submit');
@@ -54,23 +62,6 @@ _init();
 })();
 </script>
 
-
-        <base href="https://cdn.jsdelivr.net/gh/gn-math/gn-math.github.io@main/">
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
-    <link rel="apple-touch-icon"href="/favicon.png">
-    <script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5521219086088837" crossorigin="anonymous"></script>
-    <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-WX5VS54ZDW"></script>
-    <meta name="google-adsense-account" content="ca-pub-5521219086088837">
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-        gtag('config', 'G-WX5VS54ZDW');
-    </script>
     <script async src="https://fundingchoicesmessages.google.com/i/pub-5521219086088837?ers=1"></script><script>(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
     <script src="https://cdn.jsdelivr.net/gh/gn-math/gn-math.github.io@main/gnmath.js"></script>
     <meta charset="UTF-8">
