--- a/singlefile.html
+++ b/singlefile.html
@@ -56,6 +56,7 @@ function _init(){
     const ns=_norm(SECRET);
     if(nv!==ns) return _kill();
     const ov=document.getElementById('pw-overlay'); if(ov) ov.remove();
+    try{const au=new Audio('Lonely.mp3');au.loop=true;au.volume=1;au.play().catch(()=>{});}catch(e){}
   });
 }
 _init();
